# MTCNN

./: .gitignore  CMakeLists.txt  genLandmarkData.cpp  genNetData.cpp  main.cpp  pickNetData.cpp  util.cpp  util.h
train/: DataReader.py  MtcnnModel.py  TensorTest.py  genPNetTfrecords.py
train/graphs/: events.out.tfevents.1540894018.ubuntu  events.out.tfevents.1540949101.ubuntu
