cmake_minimum_required (VERSION 3.4.1)
project (mtcnn)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
find_package(Caffe REQUIRED)
include_directories(${Caffe_INCLUDE_DIRS})
add_executable(genNetData genNetData.cpp)
add_executable(genLandmarkData genLandmarkData.cpp)
target_link_libraries(genNetData ${OpenCV_LIBS})
target_link_libraries(genLandmarkData ${OpenCV_LIBS})
